# ladydebug-generator-dets

./: .gitignore  ABRIR MENU.bat  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  empacotar.ps1  menu.ps1
modelos/: modelo_det.docx
src/: acoes.rs  docx.rs  lib.rs  main.rs  menu.rs  pdf.rs  util.rs  workspace.rs  xlsx.rs
tests/: ambiente.rs  docx_engine.rs  gerar_compilado.rs  gerar_docx.rs  gerar_pdf.rs  leitura_planilha.rs  organizar.rs  util.rs
tests/common/: mod.rs
